Please let us OJT
Noice

--- a/public/Archive5.html
+++ b/public/Archive5.html
@@ -21,14 +21,13 @@
               </a>
           </div>
             <ul class="menu-list">
-              <div class="HeadnFooter/closewindow.png">
-                <img src="HeadnFooter/menu.png" alt="">
+              <div class="icon cancel-btn">
+                <img src="HeadnFooter/closewindow.png" alt="">
               </div>
               <li><a href="Sundayservice.html">Home</a></li>
               <li><a href="Sundayservice.html#aboutus">About Us</a></li>
               <li><a href="Sundayservice.html#sermons">Sermons</a></li>
               <li><a href="Sundayservice.html#subscribe">Subscribe</a></li>
-              <li><a href="PrayerRequest.html">Prayer Request</a></li>
               <li><a href="Announcement.html">Announcements</a></li>
             </ul>
             <div class="icon menu-btn">
