--- a/public/Form.html
+++ b/public/Form.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="MenSOLLife.css">
-    <link rel="stylesheet" href="MentoringNavbar.css">
+    <link rel="stylesheet" href="Form.css">
+    <link rel="stylesheet" href="FormNavbar.css">
     <script defer src="equipping.js"></script>
-    <title>Mentoring Form</title>
+    <title>Subscription Form</title>
 </head>
 <body>
 
@@ -23,10 +23,12 @@
             <div class="icon cancel-btn">
                 <img src="HeadnFooter/closewindow.png" alt="">
             </div>
-                <li><a href="Mentoring.html">Mentoring</a></li>
-                <li><a href="SOL.html">SOL CLass</a></li>
-                <li><a href="LifeClass.html">Life Class</a></li>
-                <li><a href="Announcement.html">Announcements</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="Sundayservice.html">Sunday Service</a></li>
+                <li><a href="Wildfire.html">Wildfire</a></li>
+                <li><a href="J12Kids.html">J12 Kids</a></li>
+                <li><a href="Spearhead.html">Spearhead</a></li>
+                <li><a href="Married4Life.html">Married For Life</a></li>
         </ul>
         <div class="icon menu-btn">
             <img src="HeadnFooter/menu.png" alt="">
@@ -37,12 +39,13 @@
 
     <body>
         <div class="textPrayer">
-            <h1>Mentoring Registration Form</h1>
+            <h1>Subscription Form</h1>
+            <p>Fill up the form so we can send you the latest news about our church via email or text!</p>
           </div>
           
           <div class="containers">
             <form>
-                <label>Name (Optional) </label> <br>
+                <label>Name</label> <br>
                 <input type="name"> <br>
                 <label>Email </label> <br>
                 <input type="email"> <br>
