--- a/public/LifeClassForm.html
+++ b/public/LifeClassForm.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="LifeCLassForm.css">
     <link rel="stylesheet" href="LifeClassNavBar.css">
     <script defer src="equipping.js"></script>
-    <title>Mentoring</title>
+    <title>LifeClass Form</title>
 </head>
 <body>
 
