--- a/public/SOLClassForm.html
+++ b/public/SOLClassForm.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="SOLForm.css">
     <link rel="stylesheet" href="SOLNavBar.css">
     <script defer src="equipping.js"></script>
-    <title>Mentoring</title>
+    <title>SOL CLass Form</title>
 </head>
 <body>
 
