--- a/public/Story3.html
+++ b/public/Story3.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="story.css">
     <link rel="stylesheet" href="StoriesNavBar.css">
     <script src="j12kids.js" defer></script>
+    <script src="Navbar.js" defer></script>
     <title>Daniel and the Lion</title>
 </head>
 <body>
@@ -44,14 +45,6 @@
 <div class="container">
     <p>The story of Daniel and the Lion's Den is one of the most famous stories in the Bible, found in the book of Daniel, chapter 6. The story tells of how Daniel, a faithful servant of God, was thrown into a den of lions for disobeying the king's decree, but was miraculously saved by God.</p>
     <p>At the time, Daniel was living in Babylon during the reign of King Darius. Daniel had distinguished himself as a wise and capable advisor to the king and had gained the envy of his fellow administrators. They plotted against him and convinced the king to sign a decree stating that anyone who prayed to any god or man other than the king for thirty days would be thrown into the lion's den.</p>
-    <div class="breh">
-        <div class="noice">
-            <p>Despite the king's decree, Daniel continued to pray three times a day to God, as he had always done. When the other administrators found out about this, they reported him to the king, who had no choice but to carry out the punishment he had decreed.</p>
-        </div>
-        <div class="bruh">
-            <img src="J12KidsIMGs/danielandtheLion.jpg" alt="">
-        </div>
-    </div>
     <p>Daniel was thrown into the den of lions, which had been prepared for him, and a stone was placed over the mouth of the den. The king spent a sleepless night worrying about Daniel's fate. Early in the morning, he hurried to the den and called out to Daniel, asking if his God had been able to save him.</p>
     <p>To the king's amazement, Daniel replied, "My God sent his angel, and he shut the mouths of the lions. They have not hurt me because I was found innocent in his sight." The king was overjoyed and ordered that Daniel be lifted out of the den. When he was examined, there was not a scratch on him, for he had been protected by God.</p>
     <p>The king then had Daniel's accusers thrown into the lion's den, along with their wives and children, and the lions devoured them all. The king issued a decree that all the people in his kingdom should fear and reverence the God of Daniel, who is the living God and who endures forever.</p>
