--- a/public/Story4.html
+++ b/public/Story4.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="story.css">
     <link rel="stylesheet" href="StoriesNavBar.css">
     <script src="j12kids.js" defer></script>
+    <script src="Navbar.js" defer></script>
     <title>Story of Creation</title>
 </head>
     <body>
@@ -44,16 +45,6 @@
 <div class="container">
     <p>The story of creation is found in the book of Genesis in the Bible, and is a powerful account of the origins of the universe and humanity. Here is the story of creation</p>
     <p>In the beginning, God created the heavens and the earth. The earth was formless and empty, and darkness covered the deep waters. Then God said, "Let there be light," and there was light. God saw that the light was good, and he separated the light from the darkness. He called the light "day" and the darkness "night." This was the first day of creation.</p>
-    <div class="breh">
-        <div class="noice">
-            <p>On the second day, God created the expanse or sky that separated the waters above from the waters below.</p>
-            <p>On the third day, God created dry land and named it "earth," and the waters he called "seas." He then created all kinds of vegetation, plants, and trees that bear fruit and seed.</p>
-            <p>On the fourth day, God created the sun, moon, and stars to rule over the day and the night, and to mark the seasons, days, and years.</p>
-        </div>
-        <div class="bruh">
-            <img src="J12KidsIMGs/creation.jpg" alt="">
-        </div>
-    </div>
     <p>On the fifth day, God created all kinds of living creatures in the seas and the sky, including fish, birds, and sea creatures.</p>
     <p>On the sixth day, God created land animals, including livestock, wild animals, and creatures that crawl on the ground. Then God said, "Let us make mankind in our image, in our likeness." So God created mankind in his own image, male and female he created them. God blessed them and said, "Be fruitful and increase in number; fill the earth and subdue it. Rule over the fish in the sea and the birds in the sky and over every living creature that moves on the ground."</p>
     <p>On the seventh day, God rested from all his work of creating, and he made the seventh day a holy day of rest.</p>
