--- a/public/Sundayservice.html
+++ b/public/Sundayservice.html
@@ -18,13 +18,12 @@
         </a>
         <ul class="menu-list">
           <div class="icon cancel-btn">
-            <img src="HeadnFooter/menu.png" alt="">
+            <img src="HeadnFooter/closewindow.png" alt="">
           </div>
           <li><a href="index.html#connects">Home</a></li>
           <li><a href="#aboutus">About Us</a></li>
           <li><a href="#sermons">Sermons</a></li>
           <li><a href="#subscribe">Subscribe</a></li>
-          <li><a href="PrayerRequest.html">Prayer Request</a></li>
           <li><a href="AnnouncementSundayService.html">Announcements</a></li>
         </ul>
         <div class="icon menu-btn">
@@ -174,16 +173,10 @@
     
   <div class="pandA">
 
-    <div class="prayerReq">
-      <h1>Prayer Request</h1>
-      <p>Prayer is an important part of our faith journey, and we believe that God hears and answers our prayers. If you have a specific prayer request, we would be honored to pray with you and for you.</p>
-      <a href="index.html#prayerRequest"><button class="button"><span><h1>Pray with us </h1></span></button></a>
-    </div>
-
     <div class="announcement">
       <h1>Announcement</h1>
       <p>Here you will find information about upcoming events, activities, and other news from our church community. We update this page regularly, so be sure to check back often for the latest updates.</p>
-      <a href="Announcement.html"><button class="button"><span><h1>Be updated </h1></span></button></a>
+      <a href="AnnouncementSundayService.html"><button class="button"><span><h1>Be updated </h1></span></button></a>
     </div>
 
   </div>
