--- a/public/Story2.html
+++ b/public/Story2.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="story.css">
     <link rel="stylesheet" href="StoriesNavBar.css">
     <script src="j12kids.js" defer></script>
+    <script src="Navbar.js" defer></script>
     <title>David and Goliath</title>
 </head>
 
@@ -45,14 +46,6 @@
 <div class="container">
     <p>The story of David and Goliath is one of the most well-known and beloved stories in the Bible. It is found in the book of 1 Samuel, chapter 17. The story tells of how a young shepherd boy named David defeated a giant named Goliath, who was a champion warrior of the Philistine army.</p>
     <p>The story begins with the Philistines and Israelites at war with each other. The Philistine army had assembled on one hill, and the Israelites on another, with a valley between them. One day, Goliath, a giant of a man who stood over nine feet tall, stepped forward from the Philistine ranks and challenged the Israelites to send out a champion to fight him one-on-one. Goliath taunted the Israelites, insulting their God and challenging them to produce a worthy opponent.</p>
-    <div class="breh">
-        <div class="noice">
-            <p>At first, the Israelites were terrified of Goliath and refused to face him. However, David, who was still a young shepherd boy, was sent by his father to bring food to his older brothers who were serving in the Israelite army. When David arrived at the camp and heard Goliath's challenge, he was outraged by the giant's insults to the God of Israel.</p>
-        </div>
-        <div class="bruh">
-            <img src="J12KidsIMGs/davidandgoliath.jpg" alt="">
-        </div>
-    </div>
     <p>David offered to fight Goliath, but King Saul was skeptical because David was just a young boy and Goliath was a seasoned warrior. Saul offered David his own armor and weapons, but David refused them, saying he could not fight in them because he was not used to them. Instead, he chose to fight with just a sling and five stones from a nearby stream.</p>
     <p>As David approached Goliath, the giant mocked him and taunted him, saying, "Am I a dog, that you come at me with sticks?" But David replied, "You come against me with sword and spear and javelin, but I come against you in the name of the Lord Almighty, the God of the armies of Israel, whom you have defied."</p>
     <p>With this, David slung one of his stones at Goliath, hitting him in the forehead and causing him to fall to the ground. David then ran up to Goliath, took his own sword, and beheaded him. The Philistines, seeing that their champion had been defeated, fled from the battle, and the Israelites won a great victory.</p>
