--- a/public/AnnouncementSundayService.html
+++ b/public/AnnouncementSundayService.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="AnnounceTrial.css">
     <link rel="stylesheet" href="AnnouncementNavBar.css">
-    <script src="Archive.js" defer></script>
+    <script src="./Archive.js" defer></script>
+    <script src="./AnnouncementSundayService.js" type="module" defer></script>
     <title>Announcement</title>
     
 </head>
@@ -23,15 +24,15 @@
             <div class="icon cancel-btn">
                 <img src="HeadnFooter/closewindow.png" alt="">
             </div>
-              <li><a href="Announcement.html">General</a></li>
-              <li><a href="AnnouncementSundayService.html">Sunday Service</a></li>
-              <li><a href="AnnouncementWildfire.html">Wildfire</a></li>
+              <!-- <li><a href="Announcement.html">General</a></li> -->
+              <li id="navbarDiv"><a href="Announcement.html">General</a></li> 
+              <!-- <li><a href="AnnouncementWildfire.html">Wildfire</a></li>
               <li><a href="AnnouncementJ12Kids.html">J12 Kids</a></li>
               <li><a href="AnnouncementSpearhead.html">Spearhead</a></li>
               <li><a href="AnnouncementMarriedforLife.html">Married for Life</a></li>
               <li><a href="AnnouncementMentoring.html">Mentoring</a></li>
               <li><a href="AnnouncementSOLClass.html">SOL Class</a></li>
-              <li><a href="AnnouncementLifeClass.html">Life Class</a></li>
+              <li><a href="AnnouncementLifeClass.html">Life Class</a></li> -->
         </ul>
         <div class="icon menu-btn">
           <img src="HeadnFooter/menu.png" alt="">
@@ -44,74 +45,15 @@
 
     <div class="announce"></div>
 
-    <div class="news1">
-      <img src="AnnounceIMGs/Sunday Service.png" alt="">
-      <div class="textBox">
-        <div class="plateName">
-          <h2><span class="sundayService">SundayService</span></h2>
-        </div>
-        <h1>Sunday Service</h1>
-        <p>We are thrilled to invite you to our upcoming Sunday Service, a spiritual celebration filled with love, joy, and unity! We warmly welcome each and every one of you to join us on a remarkable journey of faith and fellowship.</p>
-        <br>
-        <p>📅 Date: Every Sunday</p>
-        <p>⏰ Time: 9 AM</p>
-        <p>🏠 Location: 002 Rodil St, Phase 3. Brgy. Luciano, Trece Martires, Philippines and via LiveStream</p>
-        <p>For those who are unable to attend in person, fear not! We are delighted to offer Live Streaming Services, enabling you to participate in the Sunday Service from the comfort of your homes. Simply tune in to our live stream through our FB Page and Website, and you will be connected with the spiritual atmosphere of our congregation, no matter the distance.</p>
-        <br>
-        <p>🔗 Live Streaming Link: <a href="http://127.0.0.1:5501/Sundayservice.html#sermons"><span id="link">Sunday Service</span></a></p>
-      </div>
+    <div class="news1" id="news1">
+     <!--
+      Contents will appear here
+     -->
     </div>
 
-    <div class="bottomNews">
       <!-- ---------- -->
-      <div class="news2">     
-        <img src="AnnounceIMGs/sundayservice1.jpg" alt="">
-        <div class="textBox">
-          <div class="plateName">
-            <h2><span class="sundayService">Sunday Service</span></h2>
-          </div>
-          <h1>"Divinely Sculpted: Fulfilling God's Purpose with Unyielding Grace"</h1>
-          <p>Just as God does not allow Joseph to abandon Mary because she conceived Jesus, He will not allow you to stay broken because you are following Him. Wait on the Lord, for even if we cannot see it, He is working for our good. So we must wait and believe.</p>
-        </div>
-      </div>
+       <!--Programs will appear here-->
 
-      <div class="news3">
-        <img src="AnnounceIMGs/sundayservice2.jpg" alt="">
-        <div class="textBox">
-          <div class="plateName">
-            <h2><span class="sundayService">Sunday Service</span></h2>
-          </div>
-        <h1>"Embracing the Burden: Navigating Forward with a Broken Heart"</h1>
-        <p>Healing starts when we stop to bleed. And the cure for a bleeding heart is forgiveness. Your past may have hurt you deeply, but it should not continue to do so. Decide not to bring all of your grudges against people and situations into this year.</p>
-        </div>
-      </div>
-
-    </div>
-
-    <div class="bottomNews">
-
-      <div class="news2">
-        <img src="AnnounceIMGs/sundayservice3.jpg" alt="">
-        <div class="textBox">
-          <div class="plateName">
-            <span class="sundayService">Sunday Service</span>
-          </div>
-          <h1>"Transformation through Ownership: The Power of Claiming"</h1>
-          <p>Let us recognize that God is advancing us in maturity with each prayer that we ask. If we want to add something to our lives, God usually requires us to let go of some of our characteristics or habits that will not help us mature. If we want to be promoted, we must stop murmuring. If we want our relationship to be restored, we must let go of our pride. We must let go of our selfishness in order to serve others.</p>
-        </div>
-      </div>
-
-      <div class="news3">
-        <img src="AnnounceIMGs/sundayservice4.jpg" alt="">
-        <div class="textBox">
-          <div class="plateName">
-            <h2><span class="sundayService">Sunday Service</span></h2>
-          </div>
-        <h1>Online Christmas Service</h1>
-        <p>Come and let us invite our family and friends to our Online Christmas Service this Sunday, at 9 am. The best gift that we can give to them is the opportunity to know our Lord and Savior, Jesus Christ.</p>
-        </div>
-      </div>
-    
   </section>
 
   <div class="bottomLinks">
