--- a/public/Mentoring.html
+++ b/public/Mentoring.html
@@ -83,7 +83,7 @@
 
     <div class="containerForm">
       <p>If you are interested you can fill up this form so we can assisst you further in order to join Mentoring classes</p>
-      <a href="MentoringForm.html"><button>Click here</button></a>
+      <a href="EquipForm.html?equipProgram=mentoring"><button>Click here</button></a>
     </div>
 
 
