--- a/public/SOL.html
+++ b/public/SOL.html
@@ -77,7 +77,7 @@
 
 <div class="containerForm">
     <p>If you are interested you can fill up this form so we can assisst you further in order to join SOL</p>
-    <a href="SOLClassForm.html"><button>Click here</button></a>
+    <a href="EquipForm.html?equipProgram=solclass"><button>Click here</button></a>
 </div>
 
 <div class="bottomLinks">
